--- a/styles.css
+++ b/styles.css
@@ -270,20 +270,20 @@ nav.scrolled {
     top: 0;
     left: 0;
     width: 100%;
-    height: 175%;               /* default size */
+    height: 100%; /* Change this from 175% */
     background-size: cover;
-    background-position: bottom center;
+    background-position: center; /* Change this from bottom center */
     background-attachment: fixed;
     background-repeat: no-repeat;
     z-index: -1;
 }
 
-/* special parallax div for the problem image */
 .parallax-bg.img3 {
     position: absolute;
-    height: 275vh;
+    height: 100%; /* Change this from 275vh */
     z-index: -3;
 }
+
 
 /* History Section */
 .history-section {
